@@ -1,0 +1,19 @@
+/*
+ * package-info.java
+ *
+ * last update on February 2014
+ */
+
+/**
+ * This package is designed to represent lattice.
+ *
+ * Copyright: 2013 University of La Rochelle, France
+ *
+ * License: http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.html CeCILL-B license
+ *
+ * This file is part of lattice, free package. You can redistribute it and/or modify
+ * it under the terms of CeCILL-B license.
+ *
+ * @author Karell Bertet
+ */
+package lattice;
